--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,12 @@
-.logo.vite:hover {
-  filter: drop-shadow(0 0 2em #747bff);
-}
-
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafb);
+.titlebar {
+  height: 0.4rem;
+  background: #949cd1;
+  user-select: none;
+  display: flex;
+  justify-content: flex-end;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  cursor: grabbing;
 }
